--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,11 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^9.13.0",
+    "eslint": "^10.0.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3"
+  },
+  "overrides": {
+    "ajv": "^8.18.0"
   }
 }
